src/styles/style.css
.snippetPage .editBtn{
  position: absolute;
  top: 0px;
  right: 0px;
}

.showHideToggle{
  display: none !important;
}

.snippetPage .editableElement:hover .showHideToggle {
  display: inline-flex !important;
}


.snippetPage textarea { 
  word-break: break-all;
  width: 100%;

}

.sidebarColumn{
  z-index: 1;
  flex: 0 0 65px;
}
.logoIcon{
  width: 50px;
  height: 50px;
  top: 10px;
  position: fixed;
  left:7px;
}


.noBackground{
  background-color: #00000000 !important;
}

.loginDropDown .googleLogin{
  background-color:#db3236;
  color:white;
}
.loginDropDown .googleLogin:hover{
  background-color:#b82a2c;
  color:white;
}
.loginDropDown .facebookLogin:hover{
  background-color:#334d86;
  color:white;
}
.loginDropDown .facebookLogin{
  background-color:#3b5998;
  color:white;
}
.loginDropDown .twitterLogin:hover{
  background-color:rgb(50, 146, 219);
  color:white;
}

.loginDropDown .twitterLogin{
  background-color:#38A1F3;
  color:white;
}




.profile-container .profile-header .profile-stats .inlinestats-col:not(:last-child) {
  border-right: 1px solid #eee;
}
.profile-container .profile-header .profile-stats .inlinestats-col {
  padding-top: 15px;
  text-align: center;
  font-family: 'Lucida Sans','trebuchet MS',Arial,Helvetica;
  border-top: 1px solid #eee;
  min-height: 55px;
}
.profile-container .profile-header .profile-stats .stats-col .stats-value {
  display: block;
  margin: 0 auto;
  text-align: center;
  font-size: 30px;
  font-family: 'Lucida Sans','trebuchet MS',Arial,Helvetica;
}
.pink {
  color: #e75b8d!important;
}
.profile-container .profile-header .profile-stats .stats-col:not(:last-child) {
  border-right: 1px solid #eee;
}
.profile-container .profile-header .profile-stats .stats-col {
  margin: 30px 0;
  text-align: center;
}
.profile-container .profile-header .profile-stats {
  min-height: 175px;
  border-right: 1px solid #eee;
}
.profile-container .profile-header .profile-info .header-information {
  line-height: 23px;
  margin-top: 15px;
  text-align: justify;
}

.btn-palegreen, .btn-palegreen:focus {
  background-color: #a0d468!important;
  border-color: #a0d468;
  color: #fff;
}
.profile-container .profile-header .profile-info .header-fullname {
  font: 21px 'Lucida Sans','trebuchet MS',Arial,Helvetica;
  /*margin-top: 27px;*/
  display: inline-block;
}
.profile-container .profile-header .profile-info {
min-height: 175px;
border-right: 1px solid #eee;
padding-top: 15px;
padding-bottom: 35px;
}
.profile-container .header-avatar {
  width: 125px;
  height: 125px;
  -webkit-border-radius: 50%;
  -webkit-background-clip: padding-box;
  -moz-border-radius: 50%;
  -moz-background-clip: padding;
  border-radius: 50%;
  background-clip: padding-box;
  border: 5px solid #f5f5f5;
  -webkit-box-shadow: 0 0 10px rgba(0,0,0,.15);
  -moz-box-shadow: 0 0 10px rgba(0,0,0,.15);
  box-shadow: 0 0 10px rgba(0,0,0,.15);
}
.profile-container .profile-header {
  min-height: 175px;
  margin: 15px 15px 0;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.35);
  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.35);
  box-shadow: 0 1px 2px rgba(0,0,0,.35);
  background-color: #fbfbfb;
}	              




.fontSize20{
  font-size: 2rem  !important;
}
.fontSize17{
  font-size: 1.7rem  !important;
}
.fontSize15{
  font-size: 1.5rem  !important;
}

.fontSize13{
  font-size: 1.3rem  !important;
}
.fontSize12{
  font-size: 1.2rem !important;
}
.fontSize11{
  font-size: 1.1rem !important;
}
.fontSize10{
  font-size: 1rem !important;
}
.fontSize09{
  font-size: 0.9rem !important;
}
.fontSize08{
  font-size: 0.8rem !important;
}
.fontSize07{
  font-size: 0.7rem !important;
}

.padding05{
  padding:0.5rem !important;
}

.noBullet{
  list-style-type: none;
}

.sidebar{
  background-color: #35033b
}

.fullHeightPage{
  height: 100vh
}

/* Searchbar */

#custom-search-input{
  border: solid 1px #E4E4E4;
  border-radius: 6px;
  background-color: #fff;
}

#custom-search-input input{
  border: 0;
  box-shadow: none;
}

#custom-search-input button{
  margin: 7px 0px;
  background: none;
  box-shadow: none;
  border: 0;
  padding: 0 8px 0 10px;
  color: #666666;


}
#custom-search-input .searchButton{
  border-left: solid 1px #ccc;
}

#custom-search-input button:hover{
  border: 0;
  box-shadow: none;
  border-left: solid 1px #ccc;
}

#custom-search-input .glyphicon-search{
  font-size: 23px;
}

/* sidebar */
.sidebarMenuItem{
  color:#fff;
  margin: 25px auto;
  font-size: 1.5rem
}

.sidebar ul{
  position: fixed;
  top:80px;
  left:0px;
  padding-left: 7px;
}
.sidebar ul li{ 
}
.sidebar .NavIcon{
  margin: 0px auto;
  width: 25px;
  height:25px;
}


/* snippetCard */
.snippetCard{
  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
}
.snippetCardActiveBorder{
  border-left: 6px solid #ff7b00 !important; 

}
.snippetCardDeactiveBorder{
  border-left: 6px solid rgb(119, 119, 119) !important; 

}
.orangeText{
  color : #ff7b00;
}
.bookmarkTagContainer{
  position: absolute;
  right: 0;
  top: -10px;
}
.bookmarkTagContainer span{
  position: absolute;
  font-weight: 600;
}
.bookmarkTagContainer .oneDigit{
  right: 15px;
}
.bookmarkTagContainer .twoDigit{
  right: 12px;
}


.deactiveBookmarkTag{
  color: #adb5bd;
}



/* collection page */
.collectionPage .card{
  box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
  -webkit-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
  -moz-box-shadow: 2px 2px 5px 0px rgba(0,0,0,0.11);
  border-left: 6px solid #ff7b00 !important; 
}

.badgeContainer{
  position: absolute;
    top: 10px;
    right: 10px;
}

.keywordPill{
  line-height: 1;
  border-width: 2px;

}
.pointer{
  cursor: pointer;
}

.RichEditor-root {
    background: #fff;
    border: 1px solid #ddd;
    font-family: 'Georgia', serif;
    font-size: 14px;
    padding: 15px;
  }
  
  .RichEditor-editor {
    border-top: 1px solid #ddd;
    cursor: text;
    font-size: 16px;
    margin-top: 10px;
  }
  
  .RichEditor-editor .public-DraftEditorPlaceholder-root,
  .RichEditor-editor .public-DraftEditor-content {
    margin: 0 -15px -15px;
    padding: 15px;
  }
  
  .RichEditor-editor .public-DraftEditor-content {
    min-height: 100px;
  }
  
  .RichEditor-hidePlaceholder .public-DraftEditorPlaceholder-root {
    display: none;
  }
  
  .RichEditor-editor .RichEditor-blockquote {
    border-left: 5px solid #eee;
    color: #666;
    font-family: 'Hoefler Text', 'Georgia', serif;
    font-style: italic;
    margin: 16px 0;
    padding: 10px 20px;
  }
  
  .RichEditor-editor .public-DraftStyleDefault-pre {
    background-color: rgba(0, 0, 0, 0.05);
    font-family: 'Inconsolata', 'Menlo', 'Consolas', monospace;
    font-size: 16px;
    padding: 20px;
  }
  
  .RichEditor-controls {
    font-family: 'Helvetica', sans-serif;
    font-size: 14px;
    margin-bottom: 5px;
    user-select: none;
  }
  
  .RichEditor-styleButton {
    color: #999;
    cursor: pointer;
    margin-right: 16px;
    padding: 2px 0;
    display: inline-block;
  }
  
  .RichEditor-activeButton {
    color: #5890ff;
  }

